RESOLVED FIXED63669
DFG JIT - fix spectral-norm regression
https://bugs.webkit.org/show_bug.cgi?id=63669
Summary DFG JIT - fix spectral-norm regression
Gavin Barraclough
Reported 2011-06-29 16:35:40 PDT
The problem is a mis-speculation leading to us falling off the speculative path. Make the speculation logic slightly smarter, don't predict int if one of the operands is already loaded as a double (we use this logic already for compares).
Attachments
Gavin Barraclough
Comment 1 2011-06-29 21:54:29 PDT
Fixed in r90065
Note You need to log in before you can comment on or make changes to this bug.